# NetworkSnake

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/include/core/: game_synchronizer.hpp  player_params.hpp
client/include/display/: display.hpp
client/include/input/: input.hpp
client/src/: main.cpp
client/src/core/: game_synchronizer.cpp
client/src/display/: display.cpp
client/src/input/: input.cpp
libraries/network/: CMakeLists.txt
server/: CMakeLists.txt
server/src/: main.cpp
